# iotdb

iotdb-client/client-rust/: .gitattributes  Cargo.toml  build.rs
iotdb-client/client-rust/examples/: README.md  batch_insert.rs  config.rs  connect.rs  error_handling.rs  insert.rs  insert_table_row.rs  metadata.rs  query.rs  timeout.rs
iotdb-client/client-rust/scripts/: perf_test.sh  test_all.sh  test_all_verbose.sh
iotdb-client/client-rust/src/: lib.rs
iotdb-client/client-rust/src/thrift/: client.rs  common.rs  confignode.rs  datanode.rs  mod.rs
