[package]
name = "iotdb-rust-client"
version = "0.1.0"
edition = "2024"
authors = ["Apache IoTDB <dev@iotdb.apache.org>"]
description = "Apache IoTDB Rust Client"
license = "Apache-2.0"

[dependencies]
thrift = "0.23.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.45"
rand = "0.10.1"
byteorder = "1.5"
log = "0.4.32"
